--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "test": "jest --env=node --colors",
+    "test": "jest --env=node --colors && jest-coverage-badges --output './badges'",
     "build": "tsc",
     "export": "tsc && webpack"
   },
@@ -31,11 +31,17 @@
     "@types/jest": "^26.0.23",
     "@types/node": "^15.6.1",
     "jest": "27.0.1",
+    "jest-coverage-badges": "^1.1.2",
     "terser-webpack-plugin": "^4.0.0",
     "ts-jest": "27.0.1",
     "typescript": "^4.3.2",
     "webpack": "^4.44.1",
     "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^3.3.12"
+  },
+  "jest": {
+    "coverageReporters": [
+      "json-summary"
+    ]
   }
 }
